# automatic-test-creator

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.sh  tox-results.txt  tox.ini
scripts/: main.py
